# wasmarin

./: .gitignore  .taskcmd  BULK_MEMORY_PROPOSAL.md  CITATION.cff  Cargo.toml  METERING.md  NOTES_AT_FUTURE_ME.md  README.md  Taskfile.yml  a.wasm  a.wat
.github/workflows/: build-linux-gnu.yml  build-linux-musl.yml  build-macos-aarch64.yml  build-macos.yml  build-windows.yml
benches/: RESULTS.md  data_drop.rs  elem_drop.rs  locals.rs  memory_copy.rs  memory_fill.rs  memory_grow.rs  memory_init.rs  table_copy.rs  table_fill.rs  table_grow.rs  table_init.rs
docs/: README.md  RESULTS.md
manual/: book.toml
manual/src/: README.md  SUMMARY.md  bulk-memory-proposal.md  metering.md  references.md
results/: LOCALS.md  RESULTS.md  data-drop.R  data-drop.txt  elem-drop-0.txt  elem-drop-instance.txt  elem-drop.R  elem-drop.txt  memory-copy.txt  memory-fill.txt  memory-grow.txt  memory-init.txt  table-copy.txt  table-fill.txt  table-grow.txt  table-init.txt  wasmer-singlepass.txt  wasmtime-cranelift.txt  wasmtime-winch.txt
results/results-reference-machine/: data-drop-0.txt  data-drop-1.txt  data-drop.R  data-drop.md  data-drop.txt  elem-drop-0.txt  elem-drop-1.txt  elem-drop.txt  memory-copy-0.txt  memory-copy-1.txt  memory-copy.txt  memory-fill-0.txt  memory-fill-1.txt  memory-fill.txt  memory-grow-0.txt  memory-grow-1.txt  memory-grow.txt  memory-init-0.txt  memory-init-1.txt  memory-init.txt  table-copy-0.txt  table-copy-1.txt  table-copy.txt  table-fill-0.txt  table-fill-1.txt  table-fill.txt  table-grow-0.txt  table-grow-1.txt  table-grow.txt  table-init-0.txt  table-init-1.txt  table-init.txt
rezultaty/Apple-2026-07-23-12-45/: data-drop.txt  elem-drop.txt  memory-copy.txt  memory-fill.txt  memory-grow.txt  memory-init.txt  table-copy.txt  table-fill.txt  table-grow.txt  table-init.txt
rezultaty/Apple-2026-07-23-16-30/: data-drop.txt  elem-drop.txt  memory-copy.txt  memory-fill.txt  memory-grow.txt  memory-init.txt  table-copy.txt  table-fill.txt  table-grow.txt  table-init.txt
rezultaty/linux-2026-07-23-12-40/: data-drop.txt  elem-drop.txt  memory-copy.txt  memory-fill.txt  memory-grow.txt  memory-init.txt  table-copy.txt  table-fill.txt  table-grow.txt  table-init.txt
rezultaty/linux-2026-07-23-16-30/: data-drop.txt  elem-drop.txt  memory-copy.txt  memory-fill.txt  memory-grow.txt  memory-init.txt  table-copy.txt  table-fill.txt  table-grow.txt  table-init.txt
src/: encoder.rs  errors.rs  features.rs  lib.rs  main.rs  mappings.rs  metering.rs  model.rs  parser.rs
tests/: bulk_estimations.rs  estimations.rs  mod.rs  test_data_drop.rs  test_data_drop_metering.rs  test_elem_drop.rs  test_features.rs  test_globals.rs  test_memory_copy.rs  test_memory_copy_metering.rs  test_memory_fill.rs  test_memory_grow.rs  test_memory_init.rs  test_memory_size.rs  test_metering.rs  test_parsing_globals.rs  test_semantics.rs  test_simple_round_trip.rs  test_simple_wasmtime.rs  test_table_copy.rs  test_table_fill.rs  test_table_grow.rs  test_table_init.rs  test_table_size.rs
tests/bulk_memory_estimations/: estimate_data_drop.rs  estimate_elem_drop.rs  mod.rs
tests/contracts/: big_locals.wat  burner.wasm  unmetered_call_frame.wasm
tests/instruction_semantics/: memory_copy.rs  mod.rs  table_copy.rs  table_grow.rs  test_data_drop.rs  test_elem_drop.rs  test_memory_grow.rs  (+1 more)
(+30 files in other folders)
