[package]
name = "wasmarin"
version = "0.0.1"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "WebAssembly runtime for smart contracts"
documentation = "https://docs.rs/wasmarin"
repository = "https://github.com/EngosSoftware/wasmarin.git"
keywords = ["webassembly", "runtime", "smart", "contracts"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "NOTES_AT_FUTURE_ME.md",
    "CODE_OF_CONDUCT.md",
    "CITATION.cff"
]

[lib]
name = "wasmarin"
path = "src/lib.rs"

[[bin]]
name = "wasmarin"
path = "src/main.rs"

[dependencies]
wasmparser = "0.239.0"
wasmprinter = "0.239.0"
wasmtime = "37.0.0"
wasm-encoder = "0.239.0"
wat = "1.239.0"
