[package]
name = "wasmarin"
version = "0.0.1"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "WebAssembly runtime for decision contracts"
documentation = "https://docs.rs/wasmarin"
repository = "https://github.com/EngosSoftware/wasmarin.git"
keywords = ["webassembly", "runtime", "decision", "contracts"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github",
    ".gitignore",
    "CODE_OF_CONDUCT.md",
    "CITATION.cff",
    "manual"
]

[lib]
name = "wasmarin"
path = "src/lib.rs"

[[bin]]
name = "wasmarin"
path = "src/main.rs"

[dependencies]
wasmparser = "=0.239.0"
wasmprinter = "=0.239.0"
wasmtime = { version = "=37.0.0", features = ["winch"] }
wasm-encoder = "=0.239.0"
wat = "=1.239.0"
wasmer = { version = "=5.0.6", features = ["singlepass"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "locals"
path = "benches/locals.rs"
harness = false

[[bench]]
name = "memory-init"
path = "benches/memory_init.rs"
harness = false

[[bench]]
name = "memory-grow"
path = "benches/memory_grow.rs"
harness = false

[[bench]]
name = "memory-fill"
path = "benches/memory_fill.rs"
harness = false

[[bench]]
name = "memory-copy"
path = "benches/memory_copy.rs"
harness = false

[[bench]]
name = "table-init"
path = "benches/table_init.rs"
harness = false

[[bench]]
name = "table-grow"
path = "benches/table_grow.rs"
harness = false

[[bench]]
name = "table-fill"
path = "benches/table_fill.rs"
harness = false

[[bench]]
name = "table-copy"
path = "benches/table_copy.rs"
harness = false

[[bench]]
name = "data-drop"
path = "benches/data_drop.rs"
harness = false

[[bench]]
name = "elem-drop"
path = "benches/elem_drop.rs"
harness = false
